--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -57,7 +57,6 @@ jobs:
           # notable plugin
           plugin_notable: yes
           plugin_notable_from: organization
-          plugin_notable_skipped: AdrianCert
           plugin_notable_types: commit
 
           # people plugin
@@ -72,33 +71,14 @@ jobs:
           plugin_topics_mode: starred
           plugin_topics_sort: stars
 
-          # steam plugin
-          # token: ${{ secrets.STEAM_TOKEN }}
-          # plugin_steam: yes
-          # plugin_steam_achievements_limit: 2
-          # plugin_steam_games_limit: 1
-          # plugin_steam_playtime_threshold: 2
-          # plugin_steam_recent_games_limit: 3
-          # plugin_steam_sections: player, most-played, recently-played
-          # plugin_steam_user: adrian_v7
-
           # wakatime plugin
-          # plugin_wakatime: yes
-          # plugin_wakatime_days: 365
-          # plugin_wakatime_limit: 5
-          # plugin_wakatime_repositories_visibility: all
-          # plugin_wakatime_sections: time, projects, projects-graphs, languages, languages-graphs, editors, os
-          # plugin_wakatime_url: https://wakatime.com
-          # plugin_wakatime_user: current
-
-          # habits plugin
-          # plugin_habits: yes
-          # plugin_habits_charts_type: classic
-          # plugin_habits_days: 14
-          # plugin_habits_facts: yes
-          # plugin_habits_from: 200
-          # plugin_habits_languages_limit: 8
-          # plugin_habits_languages_threshold: 0%
+          plugin_wakatime: yes
+          plugin_wakatime_days: 365
+          plugin_wakatime_limit: 5
+          plugin_wakatime_repositories_visibility: all
+          plugin_wakatime_sections: time, projects, projects-graphs, languages, languages-graphs, editors, os
+          plugin_wakatime_url: https://wakatime.com
+          plugin_wakatime_user: current
 
           # repositories plugin
           plugin_repositories: yes
